added 52-week high and low as grid

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
     <div class="container">
       <a class="navbar-brand" href="/">Home</a>
       <div class="navbar-nav">
-        <a class="nav-link" href="high52">52-Week High</a>
-        <a class="nav-link" href="low52">52-Week Low</a>
+        <a class="nav-link" routerLink="high52">52-Week High</a>
+        <a class="nav-link" routerLink="low52">52-Week Low</a>
       </div>
     </div>
       <div>
